# glimmer

./: .editorconfig  .gitignore  meson.build
include/glimmer/: glimmer.h
include/glimmer/vulkan/: vulkan_impl.h
src/: glimmer.c  meson.build
test/: cube.c  meson.build  vulkan_app.h
